--- a/_config.yml
+++ b/_config.yml
@@ -19,21 +19,21 @@ source-code: https://github.com/heangela/bluegraychinese
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: CollectionBuilder-GH 
+title: The Blue, The Gray and the Chinese
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: a template for creating simple digital exhibits
+tagline: LIS 529 Digital Humanities Consultation Project
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "CollectionBuilder-GH is a template for creating small digital collection exhibits on GitHub Pages designed for teaching digital library skills"
+description: "The Blue, The Gray and the Chinese is a blog run by Alex Jay collecting various sources and materials regarding the participation of Chinese soldiers in the American Civil War"
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
-author: CollectionBuilder
+author: Alex Jay, Angela He
 
 ##########
 # COLLECTION SETTINGS
 #
 # Set the metadata for your collection (the name of the csv file in your _data directory that describes the objects in your collection) 
 # Use the filename of your CSV **without** the ".csv" extension! E.g. _data/demo-metadata.csv --> "demo-metadata"
-metadata: demo-metadata 
+metadata: consultation 
 
 ##########
 # Site/Organization Branding 
