--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 
 ##########
 # URL VARIABLES [optional if using GitHub Pages!]
-#
+
 # url is site domain, full URL to the production location of your collection
 url: https://heangela.github.io 
 # baseurl is path to location on the domain if necessary e.g. /digital/hjccc
@@ -17,20 +17,20 @@ source-code: https://github.com/heangela/bluegraychinese
 
 ##########
 # SITE SETTINGS
-#
+
 # title of site appears in banner
-title: The Blue, The Gray and the Chinese
+title: "The Blue, The Gray and the Chinese"
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: LIS 529 Digital Humanities Consultation Project
+tagline: "LIS 529 Digital Humanities Consultation Project"
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
 description: "The Blue, The Gray and the Chinese is a blog run by Alex Jay collecting various sources and materials regarding the participation of Chinese soldiers in the American Civil War"
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
-author: Alex Jay, Angela He
+author: "Alex Jay, Angela He"
 
 ##########
 # COLLECTION SETTINGS
-#
+
 # Set the metadata for your collection (the name of the csv file in your _data directory that describes the objects in your collection) 
 # Use the filename of your CSV **without** the ".csv" extension! E.g. _data/demo-metadata.csv --> "demo-metadata"
 metadata: consultation 
