--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ title: "The Blue, The Gray and the Chinese"
 tagline: "LIS 529 Digital Humanities Consultation Project"
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "The Blue, The Gray and the Chinese is a blog run by Alex Jay collecting various sources and materials regarding the participation of Chinese soldiers in the American Civil War"
+description: "The Blue, The Gray and the Chinese is a blog run by Alex Jay on the participation of Chinese soldiers in the American Civil War"
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: "Alex Jay, Angela He"
 
@@ -38,7 +38,7 @@ metadata: consultation2
 ##########
 # Site/Organization Branding 
 #   Uncomment these and enter information for your organization (replacing the CDIL links and name below) if you'd like to brand your site with a logo
-#
+
 # organization-name: "Center for Digital Inquiry and Learning (CDIL)"
 # organization-link: https://cdil.lib.uidaho.edu/
 # organization-logo-banner: https://cdil.lib.uidaho.edu/storying-extinction/assets/img/cdil.png
@@ -48,9 +48,9 @@ metadata: consultation2
 
 ##########
 # GOOGLE SERVICES [optional!]
-#
+
 # leave these blank or comment out to NOT include google code. See docs/google.md
-#
+
 # Add your google-analytics-id to automatically add the embed code, e.g. "UA-76328753-1"
 # google-analytics-id:
 # to populate a Google CSE add the id, e.g. "002151703305773322890:1pu3smhw1t8"
@@ -58,17 +58,17 @@ metadata: consultation2
 
 ##########
 # ROBOTS EXCLUDE
-#
+
 # set noindex to true if you do NOT want Google to index your site
 # noindex: true 
 
 ##########
 # BUILD SETTINGS 
-#
+
 # Note: use environment variable on build command to include analytics
 # JEKYLL_ENV=production jekyll build
 # (this is done automatically by gh-pages build)
-#
+
 # ignore stuff
 exclude: [docs/, Rakefile, README.md, LICENSE]
 # compress CSS output
